--- a/大模型ACP认证教程/p2_构造大模型问答系统/2_1_用大模型构建新人答疑机器人.ipynb
+++ b/大模型ACP认证教程/p2_构造大模型问答系统/2_1_用大模型构建新人答疑机器人.ipynb
@@ -81,6 +81,7 @@
                 "import os\n",
                 "from config.load_key import load_key\n",
                 "load_key()\n",
+                "\n",
                 "print(f'''你配置的 API Key 是：{os.environ[\"DASHSCOPE_API_KEY\"][:5]+\"*\"*5}''')"
             ]
         },
@@ -124,7 +125,7 @@
                 ")\n",
                 "def get_qwen_response(prompt):\n",
                 "    response = client.chat.completions.create(\n",
-                "        model=\"qwen-max\",\n",
+                "        model=\"qwen-plus\",\n",
                 "        messages=[\n",
                 "            # system message 用于设置大模型的角色和任务\n",
                 "            {\"role\": \"system\", \"content\": \"你负责教育内容开发公司的答疑，你的名字叫公司小蜜，你要回答同事们的问题。\"},\n",
@@ -184,7 +185,7 @@
                 "        \n",
                 "        # 调用大模型，传入完整的对话历史\n",
                 "        response = client.chat.completions.create(\n",
-                "            model=\"qwen-max\",\n",
+                "            model=\"qwen-plus\",\n",
                 "            messages=conversation_history  # 包含所有历史消息\n",
                 "        )\n",
                 "        \n",
@@ -227,6 +228,24 @@
         {
             "cell_type": "code",
             "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "import time\n",
+                "\n",
+                "def get_numbers_return():\n",
+                "    for i in range(3):\n",
+                "        yield i  # 运行到这里，函数彻底结束，交出整个列表\n",
+                "        time.sleep(1)\n",
+                "\n",
+                "numbers = get_numbers_return()\n",
+                "for n in numbers:\n",
+                "    print(n)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
             "metadata": {
                 "execution": {
                     "iopub.execute_input": "2024-11-15T09:00:04.752657Z",
@@ -241,7 +260,7 @@
             "source": [
                 "def get_qwen_stream_response(user_prompt,system_prompt):\n",
                 "    response = client.chat.completions.create(\n",
-                "        model=\"qwen-max\",\n",
+                "        model=\"qwen-plus\",\n",
                 "        messages=[\n",
                 "            {\"role\": \"system\", \"content\": system_prompt},\n",
                 "            {\"role\": \"user\", \"content\": user_prompt}\n",
@@ -250,10 +269,109 @@
                 "    )\n",
                 "    for chunk in response:\n",
                 "        yield chunk.choices[0].delta.content\n",
-                "\n",
+                "    \n",
                 "response = get_qwen_stream_response(user_prompt=\"我们公司项目管理应该用什么工具\",system_prompt=\"你负责教育内容开发公司的答疑，你的名字叫公司小蜜，你要回答同事们的问题。\")\n",
                 "for chunk in response:\n",
-                "    print(chunk, end=\"\")"
+                "    print(chunk, end=\"\", flush=True)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "def multi_turn_chat():\n",
+                "    # 初始化对话历史\n",
+                "    conversation_history = [\n",
+                "        {\"role\": \"system\", \"content\": \"你负责教育内容开发公司的答疑，你的名字叫公司小蜜，你要回答同事们的问题。回答内容限制在10以内\"}\n",
+                "    ]\n",
+                "    \n",
+                "    user_questions = [\n",
+                "        \"我们公司项目管理应该用什么工具？\",\n",
+                "        \"那我怎么申请这个工具的账号呢？\",\n",
+                "        \"申请一般需要多久能批下来？\"\n",
+                "    ]\n",
+                "    \n",
+                "    for question in user_questions:\n",
+                "        print(f\"\\n👤 用户：{question}\")\n",
+                "        print(\"🤖 小蜜：\", end=\"\", flush=True)\n",
+                "        \n",
+                "        conversation_history.append({\"role\": \"user\", \"content\": question})\n",
+                "        \n",
+                "        # 调用大模型\n",
+                "        response = client.chat.completions.create(\n",
+                "            model=\"qwen-plus\",\n",
+                "            messages=conversation_history,\n",
+                "            stream=True\n",
+                "        )\n",
+                "        \n",
+                "        full_response = \"\"\n",
+                "        for chunk in response:\n",
+                "            # 提取流式内容\n",
+                "            content = chunk.choices[0].delta.content\n",
+                "            if content:\n",
+                "                print(content, end=\"\", flush=True)\n",
+                "                full_response += content  # 累加完整回复内容\n",
+                "        \n",
+                "        print() # 换行\n",
+                "        \n",
+                "        # 将完整的模型回复添加到对话历史\n",
+                "        conversation_history.append({\"role\": \"assistant\", \"content\": full_response})\n",
+                "\n",
+                "# 注意：如果是在生成器函数中使用 yield，外层调用逻辑需要保持一致\n",
+                "multi_turn_chat()"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "def multi_turn_chat():\n",
+                "    # 初始化对话历史\n",
+                "    conversation_history = [\n",
+                "        {\"role\": \"system\", \"content\": \"你负责教育内容开发公司的答疑，你的名字叫公司小蜜，你要回答同事们的问题。回答内容限制在10以内\"}\n",
+                "    ]\n",
+                "    \n",
+                "    user_questions = [\n",
+                "        \"我们公司项目管理应该用什么工具？\",\n",
+                "        \"那我怎么申请这个工具的账号呢？\",\n",
+                "        \"申请一般需要多久能批下来？\"\n",
+                "    ]\n",
+                "    \n",
+                "    for question in user_questions:\n",
+                "        print(f\"\\n👤 用户：{question}\")\n",
+                "        print(\"🤖 小蜜：\", end=\"\", flush=True)\n",
+                "        \n",
+                "        conversation_history.append({\"role\": \"user\", \"content\": question})\n",
+                "        \n",
+                "        # 调用大模型\n",
+                "        response = client.chat.completions.create(\n",
+                "            model=\"qwen-plus\",\n",
+                "            messages=conversation_history,\n",
+                "            stream=True\n",
+                "        )\n",
+                "        \n",
+                "        full_response = \"\"\n",
+                "        for chunk in response:\n",
+                "            # 提取流式内容\n",
+                "            content = chunk.choices[0].delta.content\n",
+                "            if content:\n",
+                "                yield content\n",
+                "                # print(content, end=\"\", flush=True)\n",
+                "                full_response += content  # 累加完整回复内容\n",
+                "        \n",
+                "        print() # 换行\n",
+                "        \n",
+                "        # 将完整的模型回复添加到对话历史\n",
+                "        conversation_history.append({\"role\": \"assistant\", \"content\": full_response})\n",
+                "\n",
+                "# 注意：如果是在生成器函数中使用 yield，外层调用逻辑需要保持一致\n",
+                "response = multi_turn_chat()\n",
+                "for content in response:\n",
+                "    print(content, end=\"\", flush=True)"
             ]
         },
         {
@@ -426,7 +544,7 @@
                 "\n",
                 "def get_qwen_stream_response(user_prompt, system_prompt, temperature, top_p):\n",
                 "    response = client.chat.completions.create(\n",
-                "        model=\"qwen-max\",\n",
+                "        model=\"qwen-plus\",\n",
                 "        messages=[\n",
                 "            {\"role\": \"system\", \"content\": system_prompt},\n",
                 "            {\"role\": \"user\", \"content\": user_prompt}\n",
@@ -472,7 +590,7 @@
             "outputs": [],
             "source": [
                 "# 设置temperature=1.9\n",
-                "print_qwen_stream_response(user_prompt=\"马也可以叫做\", system_prompt=\"请帮我续写内容，字数要求是4个汉字以内。\", temperature=1.9)"
+                "print_qwen_stream_response(user_prompt=\"马也可以叫做\", system_prompt=\"请帮我续写内容，字数要求是4个汉字以内。\", temperature=1.99)"
             ]
         },
         {
@@ -755,7 +873,7 @@
             "outputs": [],
             "source": [
                 "completion = client.chat.completions.create(\n",
-                "    model=\"qwen-max\",  # 此处以qwen-max为例，可按需更换模型名称。模型列表：https://help.aliyun.com/zh/model-studio/getting-started/models\n",
+                "    model=\"qwen-plus\",  # 此处以qwen-plus为例，可按需更换模型名称。模型列表：https://help.aliyun.com/zh/model-studio/getting-started/models\n",
                 "    messages=[\n",
                 "        {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
                 "        {\"role\": \"user\", \"content\": \"巴黎奥运会中国队金牌数\"},\n",
@@ -791,9 +909,9 @@
                 "    ],\n",
                 "    stream=True,\n",
                 "    # 解除以下注释会在最后一个chunk返回Token使用量\n",
-                "    # stream_options={\n",
-                "    #     \"include_usage\": True\n",
-                "    # }\n",
+                "    stream_options={\n",
+                "        \"include_usage\": True\n",
+                "    }\n",
                 ")\n",
                 "\n",
                 "print(\"\\n\" + \"=\" * 20 + \"思考过程\" + \"=\" * 20 + \"\\n\")\n",
@@ -924,7 +1042,7 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": ".venv",
+            "display_name": "aliyun_acp_learning (3.11.14)",
             "language": "python",
             "name": "python3"
         },
@@ -938,7 +1056,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.12.9"
+            "version": "3.11.14"
         }
     },
     "nbformat": 4,
