--- a/大模型ACP认证教程/p2_构造大模型问答系统/2_2_扩展答疑机器人的知识范围.ipynb
+++ b/大模型ACP认证教程/p2_构造大模型问答系统/2_2_扩展答疑机器人的知识范围.ipynb
@@ -372,8 +372,7 @@
     "custom_prompt = PromptTemplate(\n",
     "    \"\"\"\n",
     "    给定一段对话历史（人类与助手之间）和人类的后续问题，\n",
-    "    请将该问题改写为一个独立的问题，包含对话中所有相关的上下文信息。\n",
-    "\n",
+    "    请将该问题改写为一个独立的问题，包含对话中所有相关的上下文信息\n",
     "    <对话历史>\n",
     "    {chat_history}\n",
     "\n",
@@ -381,8 +380,12 @@
     "    {question}\n",
     "\n",
     "    <改写后的独立问题>\n",
+    "    \n",
     "\"\"\"\n",
     ")\n",
+    "# 在 LLM 的世界里，如果你给出的 Prompt 结尾是： ... <改写后的独立问题>\n",
+    "#AI 会认为你的话还没说完，它会自动接在你的标签后面**“续写”\n",
+    "\n",
     "\n",
     "# 模拟历史对话信息\n",
     "custom_chat_history = [\n",
@@ -403,7 +406,7 @@
     "# 创建支持多轮对话的聊天引擎\n",
     "chat_engine = CondenseQuestionChatEngine.from_defaults(\n",
     "    query_engine=query_engine,\n",
-    "    condense_question_prompt=custom_prompt,\n",
+    "    condense_question_prompt=custom_prompt, #🍎 它的任务是将用户模糊的、依赖上下文的后续问题，重写为一个独立的、语义完整的搜索命令。\n",
     "    chat_history=custom_chat_history,\n",
     "    llm=OpenAILike(\n",
     "        model=\"qwen-plus\",\n",
@@ -512,7 +515,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "aliyun_acp_learning (3.11.14)",
    "language": "python",
    "name": "python3"
   },
@@ -526,7 +529,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
