--- a/大模型ACP认证教程/p2_构造大模型问答系统/2_1_用大模型构建新人答疑机器人.ipynb
+++ b/大模型ACP认证教程/p2_构造大模型问答系统/2_1_用大模型构建新人答疑机器人.ipynb
@@ -64,7 +64,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 3,
             "metadata": {
                 "execution": {
                     "iopub.execute_input": "2024-11-15T08:58:03.667571Z",
@@ -75,7 +75,15 @@
                 },
                 "tags": []
             },
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "你配置的 API Key 是：sk-e3*****\n"
+                    ]
+                }
+            ],
             "source": [
                 "# 加载百炼的 API Key 用于调用通义千问大模型\n",
                 "import os\n",
@@ -1042,7 +1050,7 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "aliyun_acp_learning (3.11.14)",
+            "display_name": "aliyun-acp-learning",
             "language": "python",
             "name": "python3"
         },
@@ -1056,7 +1064,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.11.14"
+            "version": "3.11.12"
         }
     },
     "nbformat": 4,
