--- a/大模型ACP认证教程/p2_构造大模型问答系统/2_4_自动化评测答疑机器人的表现.ipynb
+++ b/大模型ACP认证教程/p2_构造大模型问答系统/2_4_自动化评测答疑机器人的表现.ipynb
@@ -652,6 +652,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6017eeda",
+   "metadata": {},
+   "source": [
+    "一句话总结： \n",
+    "- Recall 是看 “标准答案”里的点，被“参考资料”抓住了多少。\n",
+    "- Precision 关注的是：你搜出来的这堆资料里，废话多不多？相关的资料是不是排在最前面？"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9d7cc24c",
    "metadata": {},
    "source": [
@@ -1039,7 +1049,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "learnacp",
+   "display_name": "aliyun_acp_learning",
    "language": "python",
    "name": "python3"
   },
@@ -1053,7 +1063,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.12"
   }
  },
  "nbformat": 4,
