--- a/大模型ACP认证教程/p2_构造大模型问答系统/2_5_优化RAG应用提升问答准确度.ipynb
+++ b/大模型ACP认证教程/p2_构造大模型问答系统/2_5_优化RAG应用提升问答准确度.ipynb
@@ -246,7 +246,7 @@
     "query_engine = index.as_query_engine(\n",
     "    streaming=True,\n",
     "    # 一次检索出 5 个文档切片，默认为 2\n",
-    "    similarity_top_k=5\n",
+    "    similarity_top_k=10\n",
     ")"
    ]
   },
@@ -2191,7 +2191,7 @@
    "notebook_metadata_filter": "-all"
   },
   "kernelspec": {
-   "display_name": "learnacp",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -2205,7 +2205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.12"
   }
  },
  "nbformat": 4,
