--- a/大模型ACP认证教程/p2_构造大模型问答系统/2_6_构建Agent完成复杂任务.ipynb
+++ b/大模型ACP认证教程/p2_构造大模型问答系统/2_6_构建Agent完成复杂任务.ipynb
@@ -433,7 +433,7 @@
     "    model=\"qwen-plus\", messages=messages, tools=tools, tool_choice=\"auto\"\n",
     ")\n",
     "response_message = response.choices[0].message\n",
-    "# 3. 检查模型是否决定调用工具并执行\n",
+    "#3. 检查模型是否决定调用工具并执行\n",
     "if response_message.tool_calls:\n",
     "    tool_call = response_message.tool_calls[0]\n",
     "    function_name = tool_call.function.name\n",
@@ -453,6 +453,27 @@
     "    final_response = client.chat.completions.create(model=\"qwen-plus\", messages=messages)\n",
     "    print(\"\\n模型的最终回复:\")\n",
     "    print(final_response.choices[0].message.content)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "183aedbe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[ChatCompletionMessageToolCall(id='call_0adb424ae8954868a3d0e6', function=Function(arguments='{\"query\": \"Attention Is All You Need\"}', name='search_arxiv_paper'), type='function', index=0)]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response_message.tool_calls"
    ]
   },
   {
@@ -483,10 +504,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "81fe2bae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "用户请求: 帮我找一下那篇经典的 Transformer 论文 'Attention Is All You Need'\n",
+      "\n",
+      "Course Research Agent: {\n",
+      "    \"type\": \"tool_use\",\n",
+      "    \"id\": \"call_fe1309e5dd87438eab9a84\",\n",
+      "    \"name\": \"search_arxiv_paper\",\n",
+      "    \"input\": {\n",
+      "        \"query\": \"Attention Is All You Need\"\n",
+      "    }\n",
+      "}\n",
+      "--- [工具执行中] 正在 Arxiv 搜索: Attention Is All You Need ---\n",
+      "system: {\n",
+      "    \"type\": \"tool_result\",\n",
+      "    \"id\": \"call_fe1309e5dd87438eab9a84\",\n",
+      "    \"name\": \"search_arxiv_paper\",\n",
+      "    \"output\": [\n",
+      "        {\n",
+      "            \"type\": \"text\",\n",
+      "            \"text\": \"已成功找到论文 'Attention Is All You Need'，你可以在这里访问：https://arxiv.org/abs/1706.03762\"\n",
+      "        }\n",
+      "    ]\n",
+      "}\n",
+      "Course Research Agent: {\n",
+      "    \"type\": \"tool_use\",\n",
+      "    \"id\": \"call_0fc6d41e2a124107827e11\",\n",
+      "    \"name\": \"search_arxiv_paper\",\n",
+      "    \"input\": {\n",
+      "        \"query\": \"Attention Is All You Need\"\n",
+      "    }\n",
+      "}\n",
+      "--- [工具执行中] 正在 Arxiv 搜索: Attention Is All You Need ---\n",
+      "system: {\n",
+      "    \"type\": \"tool_result\",\n",
+      "    \"id\": \"call_0fc6d41e2a124107827e11\",\n",
+      "    \"name\": \"search_arxiv_paper\",\n",
+      "    \"output\": [\n",
+      "        {\n",
+      "            \"type\": \"text\",\n",
+      "            \"text\": \"已成功找到论文 'Attention Is All You Need'，你可以在这里访问：https://arxiv.org/abs/1706.03762\"\n",
+      "        }\n",
+      "    ]\n",
+      "}\n",
+      "Course Research Agent: 已成功找到论文《Attention Is All You Need》，这是 Transformer 架构的奠基性工作，于2017年发表在arXiv上。你可以通过以下链接直接访问：\n",
+      "\n",
+      "🔗 [https://arxiv.org/abs/1706.03762](https://arxiv.org/abs/1706.03762)\n",
+      "\n",
+      "该论文由 Vaswani 等人提出，彻底摒弃了 RNN/CNN 结构，仅依赖自注意力（self-attention）与前馈网络构建编码器-解码器架构，在机器翻译等任务上取得突破性成果，深刻影响了后续大语言模型的发展。\n",
+      "\n",
+      "如需我帮你：\n",
+      "- 提取论文核心思想/结构图解  \n",
+      "- 总结关键公式（如 Scaled Dot-Product Attention）  \n",
+      "- 推荐配套学习资源（视频、代码实现、中文解读）  \n",
+      "- 或查找该论文的高引衍生工作（如 BERT、GPT 系列）\n",
+      "\n",
+      "欢迎随时告诉我！\n"
+     ]
+    }
+   ],
    "source": [
     "import asyncio\n",
     "from agentscope.agent import ReActAgent\n",
@@ -599,10 +682,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "3301aaea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2026-02-08 23:15:01,356 | INFO    | _toolkit:register_mcp_client:716 - Registered 1 tool functions from MCP: bailian_web_search.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "用户请求: 我正在为'大模型原理'课程搜集素材，需要一个调用外部实时数据的例子，比如帮我搜索一下最近关于'大型语言模型'的最新进展。\n",
+      "\n",
+      "Research Assistant Agent: {\n",
+      "    \"type\": \"tool_use\",\n",
+      "    \"id\": \"call_b0db37ac81504da682cdb7\",\n",
+      "    \"name\": \"bailian_web_search\",\n",
+      "    \"input\": {\n",
+      "        \"query\": \"大型语言模型 最新进展 2024\",\n",
+      "        \"count\": 5\n",
+      "    }\n",
+      "}\n",
+      "system: {\n",
+      "    \"type\": \"tool_result\",\n",
+      "    \"id\": \"call_b0db37ac81504da682cdb7\",\n",
+      "    \"name\": \"bailian_web_search\",\n",
+      "    \"output\": [\n",
+      "        {\n",
+      "            \"type\": \"text\",\n",
+      "            \"text\": \"{\\\"status\\\": 0, \\\"pages\\\": [{\\\"snippet\\\": \\\"麻省理工学院(MIT)计算机科学与人工智能实验室(CSAIL)于2024年发布的研究揭示了大型语言模型(LLM)在视觉领域的潜力,即使主要通过文本训练,LLM也能通过代码生成复杂的视觉概念并进行自我修正。研究人员开发了LILO、Ada和LGA三种神经符号方法,通过自然语言帮助LLM在编码、规划和机器人领域构建更好的抽象库,显著提高了任务准确性。2025年,LLM在视觉领域的应用进一步深化,例如Google的Imagen 3和OpenAI的DALL-E 4等文本到视觉模型能生成高质量图像和视频,Meta AI的Perceiver IO V2和Anthropic的Claude Vision等多模态LLM展现出强大的图像理解能力。微软的Phi-3小型语言模型(SLM)系列则以卓越的性能和成本效益,在资源受限环境下的本地设备和边缘计算中展现出广泛的应用前景。这些进展预示着人工智能系统在未来将能够更好地理解和生成复杂内容,为各领域带来更多创新和进步。 估计阅读时间:2.5分钟。\\\", \\\"title\\\": \\\"麻省理工学院研究:大型语言模型在视觉领域的最新进展与2025年趋势 \\\", \\\"url\\\": \\\"https://www.forwardpathway.com/107439\\\", \\\"hostname\\\": \\\"无\\\", \\\"hostlogo\\\": \\\"http://www.forwardpathway.com/favicon.ico\\\"}, {\\\"snippet\\\": \\\"1. Open AI o1大模型 OpenAI在2024年9月13日公开了一系列全新AI大模型,旨在专门解决难题。这些新模型可以实现复杂推理,一个通用模型解决比此前的科学、代码和数学模型能做到的更难的问题。o1模型在一系列高难基准测试中展现出了超强实力,相比GPT-4o有巨大提升。 2. Meta Llama 3.1 Meta发布了Llama 3.1,这是当时最大的开源AI模型,拥有4050亿参数。该模型在多个基准测试中的表现超过了GPT-4o和Anthropic的Claude 3.5 Sonnet。Llama 3.1主要处理文本任务,包括编程、回答基本数学问题以及用八种语言(英语、德语、法语、意大利语、葡萄牙语、印地语、西班牙语和泰语)总结文件。 Llama 3.2 Meta发布了其首款能够处理图像和文本的开源模型Llama 3.2。Llama 3.2包括两个视觉模型(分别拥有110亿和900亿参数)和两个轻量级仅文本模型(分别拥有10亿和30亿参数),旨在在高通、联发科等Arm硬件上运行。 MovieGen Meta推出了MovieGen,这是一个能够根据文本输入生成视频的AI模型,具备高达300亿个参数的能力,使其能够生成长达16秒的高质量视频。MovieGen的Audio版本则可以为视频提供同步的高保真音频,标志着Meta在多模态生成技术上的重要进展。 3. Google Gemini系列模型 Gemini 1.5 Pro:这是Gemini系列的一个进阶版本,提供了100万Tokens的上下文长度,并支持35种语言。它在多模态和长上下文处理方面取得了突破,能够处理长达2小时的视频、22小时的音频、超过60,000行代码或超过140万个单词。 Gemini 1.5 Flash:这是一个更轻量级的模型,针对需要快速响应和成本效益的任务进行了优化。它在AI Studio和Vertex AI中提供,并且是为规模化构建的。 Gemma 2 Google DeepMind在2024年6月27日发布了Gemma 2,这是Gemma系列轻量级开放语言模型的最新成员。Gemma 2在架构和训练方法上都有重大创新,在多项基准测试中取得了显著进步,甚至可以与参数规模大2-3倍的模型相媲美。Gemma 2模型的训练数据量约为其第一代的两倍,总计13万亿Tokens(27b模型)和8万亿Tokens(9b模型)的网页数据(主要是英语)、代码和数学数据。\\\", \\\"title\\\": \\\"原创|群英荟萃:盘点2024年的大语言模型 \\\", \\\"url\\\": \\\"https://mp.weixin.qq.com/s?__biz=MzI1MjQ2OTQ3Ng==&mid=2247649774&idx=1&sn=87c3735abb7dd47c6f53a4dcedd0024a&chksm=e9ef8065de980973327bc0c56d37b8f3de3c40615dcbd2d971074e63a15a89247cedb7e6c3a3&scene=27\\\", \\\"hostname\\\": \\\"腾讯网\\\", \\\"hostlogo\\\": \\\"https://search-operate.cdn.bcebos.com/6a15e3da696bf097938b48d38e132a60.jpeg\\\"}, {\\\"snippet\\\": \\\"旧金山市中心有一座名为双子峰的山丘,站在山顶几乎可以俯瞰整座城市。你可以试着想象,目之所及的每一个街区、每一个十字路口、每一片社区和公园,全都铺满了白纸,这些白纸上写满了密密麻麻的数字。 这就是具象化大语言模型的一种方式,至少可以用来理解中等规模的模型。如果将一个 2000 亿参数的模型以 14 号字体打印出来,其内容可以铺满 46 平方英里的纸张,面积差不多能覆盖整个旧金山。这样的模型例如 OpenAI 于 2024 年推出的 GPT-4o。而那些规模最大的模型,打印所需的纸张面积足以覆盖洛杉矶全市。 如今,人类正与这类体量庞大且结构复杂的机器共存。没有人能完全弄清楚它们的本质、运行机制以及真正的能力边界,即便是参与构建这些模型的研发人员也不例外。“人类的大脑永远无法真正完全理解它。”OpenAI 公司的研究员丹・莫辛(Dan Mossing)这样表示。 这无疑是一个亟待解决的问题。尽管人们完全不清楚模型的运行原理,也无法准确界定它们的能力边界,但目前全球每天仍有数亿人在使用这项技术。如果没有人知道模型输出特定内容的方式和原因,就很难有效控制模型的幻觉现象,也无法建立起有效的约束机制。人们将难以判断在何种情况下应该信任这些模型,又在何种情况下不该信任。 无论你认为这类技术带来的风险是关乎人类生存的重大危机,就像许多致力于研究这项技术的科研人员所担忧的那样;还是认为风险相对普通,比如模型可能传播虚假信息,或是诱导弱势群体陷入有害关系,弄清楚大语言模型的运行机制都变得前所未有的重要。 莫辛与其他研究人员正开始拼凑这一谜题的零星碎片,这些研究人员不仅来自 OpenAI,还包括 Anthropic 和 Google DeepMind 等竞争企业。他们正在探索全新的研究技术,试图从构成大语言模型的海量数字中,找出潜藏在表面混乱之下的规律。他们对待这些模型的方式,就像研究生物学或神经科学一样,把模型看作突然出现在人类社会中的庞然大物,如同一座城市般庞大的未知生命体。 研究人员正在发现,大语言模型的特性比他们预想的还要怪异。但与此同时,他们也比以往任何时候都更清楚地知道这些模型的优势和短板。他们还能更清晰地洞察到,当模型做出一些反常且出人意料的行为时,比如在任务中作弊,或是采取措施阻止人类将其关闭,其内部究竟在发生怎样的变化。 是培育而成,还是演化而来 大语言模型由数十亿乃至数千亿个数字构成,这些数字被称为参数。\\\", \\\"title\\\": \\\"把AI当作生命体研究后,科学家发现了它怪异的生物特性\\\", \\\"url\\\": \\\"https://www.163.com/dy/article/KJKVL0JD05119734.html\\\", \\\"hostname\\\": \\\"网易\\\", \\\"hostlogo\\\": \\\"https://ss1.baidu.com/6ONXsjip0QIZ8tyhnq/it/u=1534926245,1016405979&fm=195&app=88&f=JPEG?w=200&h=200\\\"}, {\\\"snippet\\\": \\\"  技术革新的核心——大语言模型   大语言模型作为新一轮科技产业革命的战略性技术,正引发经济、社会、文化等领域的变革和重塑。从软硬件协同、数据丰富度到算法优化,本报告深入探讨了大模型的技术基石,并展望了其在多模态数据处理、自适应学习能力等方面的发展前景。   核心能力进阶   人工智能大语言模型的核心能力在于深层语境解析与知识融合。通过对海量数据的深度学习和分析,大模型能够准确理解人类语言的深层含义,并将其与丰富的知识库相结合,提供更为智能、精准的服务。   创新应用形态——智能体   报告特别关注了智能体的发展,这一新兴的技术形态正成为大模型研发的重要方向。从通用机器人智能体到零代码智能体构建平台,智能体的广泛应用展示了大模型技术的无限可能。   市场发展的风向标   报告不仅在技术层面提供了深刻见解,更从产业发展的角度,分析了国产大模型的应用场景正在不断拓展,从互联网、金融、制造业等领域逐渐延伸至医疗、教育、交通等更多行业,较为成熟的大模型的应用生态丰富多样,从多模态数据处理到智能客服,人工智能技术正推动各行各业的数字化转型;从消费者角度来看,对AI产品和服务的需求越来越注重个性化和定制化,期望获得更加贴近自身需求的解决方案,在此方面,大模型在中文内容的生成和推理方面构筑了明显的比较优势,为中文用户带来了更加精准和个性化的服务体验。   《人工智能大语言模型技术发展研究》报告的发布不仅是对当前AI技术状况的深入分析,更标志着对未来科技方向的战略性评估与指引。报告全面展望了大语言模型作为下一代技术革命的核心,将如何继续引领全球科技创新和经济结构的转型。   随着人工智能核心技术的快速进步,大语言模型将不仅仅是技术领域的变革者,更将成为推动社会治理现代化、提高人民生活质量的重要力量。\\\", \\\"title\\\": \\\"《人工智能大语言模型技术发展研究报告(2024)》发布\\\", \\\"url\\\": \\\"http://www.xinhuanet.com/finance/20240705/384a1da31b6f4377b38c7c6ceb03c9eb/c.html\\\", \\\"hostname\\\": \\\"新华网\\\", \\\"hostlogo\\\": \\\"https://ss1.baidu.com/6ONXsjip0QIZ8tyhnq/it/u=2505333049,1021624375&fm=195&app=88&f=JPEG?w=200&h=200\\\"}, {\\\"snippet\\\": \\\"回望2025年,大语言模型行业取得了一些发展,但同时也面临着一定的挑战。DeepSeek凭借开源策略和推理功能成为黑马,用户增长很快。国内外头部厂商如OpenAI、谷歌、腾讯、阿里巴巴、字节跳动,以及智谱、月之暗面这些专业大模型公司,在技术、应用和生态上持续竞争。 财经专栏作者马继鹏接受《中国经营报》记者采访时表示,目前来看,整个行业还处于朝气蓬勃发展的一种状态,很明显的就是,这些互联网巨头研发的这些大语言模型,后劲还是比较足的,比如字节跳动的豆包、阿里巴巴的千问、百度的文心一言、腾讯的元宝。目前来看,各家的水平可能都差不多,但是互联网巨头在大模型应用方面,和专门做大模型的公司如Kimi、DeepSeek相比,有一些天然的优势,其更懂得怎么大规模地获取用户,怎么解决用户的实际问题。 2025这一年 综合2025年多个关键时间点的公开信息,腾讯混元大模型在这一年的发展可以概括为年初的技术攻坚与能力突破,到年中生态与应用的全面铺开,再到年底在“世界模型”上的战略卡位,体现了从技术追赶到场景落地的清晰路径。 比如,混元在模型能力升级方面,快慢思考结合,推出TurboS(快思考)与T1(慢思考)组合,增强推理与响应能力。 DeepSeek这一年的发展确实亮眼,从模型架构到应用场景都有不少突破。DeepSeek-V3(2024年12月发布)是当前的开源标杆,采用MLA(多头潜在注意力)和DeepSeek MoE架构,总参数达6710亿,每个token可激活370亿参数。它在数学推理(如MATH-500测试)和代码生成(如LiveCodeBench竞赛)中表现突出,甚至能与GPT-4o、Claude-3.5-Sonnet等闭源模型竞争。 DeepSeek-R1(2025年1月发布)则聚焦推理能力,性能与OpenAI o1正式版相当,支持上网搜索和PDF阅读,还开放了数据蒸馏和商业化使用。 如今,DeepSeek又推出了DeepSeek-V3.2和DeepSeek-V3.2-Speciale,DeepSeek-V3.2 的目标是平衡推理能力与输出长度,适合日常使用,例如问答场景和通用Agent任务场景。DeepSeek-V3.2-Speciale 的目标是将开源模型的推理能力推向极致,探索模型能力的边界。 而豆包大模型在技术、应用和生态上都实现了显著突破,已成为国内AI领域的头部玩家,日均token使用量突破50万亿,稳居中国第一、全球第三。 比如,在技术架构方面,推出混合专家模型(MoE)架构,通过动态稀疏激活技术,将万亿参数模型的推理成本降至行业平均水平的60%,性能杠杆提升至7倍。多模态交互,推出“视觉—语言—控制”三模态融合方案,在汽车工厂实践中实现缺陷检测响应时间从分钟级缩短至秒级。\\\", \\\"title\\\": \\\"大语言模型2025这一年\\\", \\\"url\\\": \\\"https://baijiahao.baidu.com/s?id=1852924733457319199&wfr=spider&for=pc\\\", \\\"hostname\\\": \\\"百家号\\\", \\\"hostlogo\\\": \\\"https://baijiahao.baidu.com/favicon.ico\\\"}], \\\"tools\\\": [], \\\"request_id\\\": \\\"73f9e893-6c20-4120-bf33-4ebae20002c3\\\"}\"\n",
+      "        }\n",
+      "    ]\n",
+      "}\n",
+      "Research Assistant Agent: 以下是近期关于'大型语言模型（LLM）'的最新进展整理，适合作为《大模型原理》课程中'调用外部实时数据'的教学案例，体现技术演进与工程实践的结合：\n",
+      "\n",
+      "🔍 **2024–2025关键进展概览（来源：MIT CSAIL、OpenAI、Meta、Google、DeepSeek等官方发布及权威媒体）**\n",
+      "\n",
+      "1. **多模态能力跃迁**\\- MIT CSAIL（2024）发现：纯文本训练的LLM可通过代码生成并自我修正视觉概念（如LILO/Ada/LGA神经符号方法），揭示LLM隐含的跨模态抽象能力。\n",
+      "- Google Imagen 3 & OpenAI DALL-E 4（2025）支持高保真长视频生成；Meta Perceiver IO V2 和 Claude Vision 实现图像理解+推理闭环。\n",
+      "\n",
+      "2. **架构创新与开源突破**\n",
+      "- Meta Llama 3.2（2024）：首款开源图文双模态模型（110B/900B视觉参数），专为Arm芯片（高通/联发科）优化，推动边缘端部署。\n",
+      "- DeepSeek-V3（2024.12）：6710亿总参+370亿激活参（MLA+MoE架构），数学（MATH-500）与代码（LiveCodeBench）性能比肩GPT-4o；R1版本（2025.01）支持实时网页搜索与PDF解析，体现‘外部工具调用’能力内生化。\n",
+      "\n",
+      "3. **推理范式升级**\n",
+      "- OpenAI o1（2024.09）：引入‘链式思考（Chain-of-Thought）+ 自我验证’机制，在复杂科学/数学任务中显著超越GPT-4o。\n",
+      "- 腾讯混元TurboS/T1组合（2025）：快慢思考分离架构，模拟人类‘直觉响应’与‘深度推理’双路径，呼应认知科学原理。\n",
+      "\n",
+      "💡 **教学建议**：\n",
+      "- 可引导学生对比分析DeepSeek-R1的‘搜索调用’与传统RAG的区别，讨论‘模型是否真正理解工具’；\n",
+      "- 结合MIT研究，探讨‘为何文本模型能涌现视觉能力’，引出表示学习与跨模态对齐原理；\n",
+      "- 将Llama 3.2的Arm适配作为软硬协同案例，说明大模型落地需突破算力、功耗、编译栈等系统级约束。\n",
+      "\n",
+      "如需某项技术（如MLA注意力机制、MoE稀疏激活）的原理图解或代码示例，我可进一步为您生成。\n"
+     ]
+    }
+   ],
    "source": [
     "import asyncio\n",
     "import os\n",
@@ -3768,13 +3908,21 @@
    "notebook_metadata_filter": "-all"
   },
   "kernelspec": {
-   "display_name": "llm_learn",
+   "display_name": "aliyun_acp_learning",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.9"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.12"
   }
  },
  "nbformat": 4,
